--- a/flask/requirements.txt
+++ b/flask/requirements.txt
@@ -2,3 +2,11 @@ Flask==1.1.2
 Flask-SQLAlchemy
 psycopg2-binary==2.9.2
 Flask-RESTful==0.3.8
+Jinja2==2.11.2
+Werkzeug==1.0.1
+click
+aniso8601
+itsdangerous==1.1.0
+pytz
+MarkupSafe==2.0.1
+six
