--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -26,8 +26,8 @@ services:
           - nginx-net
         volumes:
           - type: bind
-            source: ./flask/java
-            target: /usr/local/
+            source: ./job-dsl/java
+            target: /usr/local/lib
           - jenkins-log:/var/log/jenkins
           - jenkins-data:/var/jenkins_home
         environment:
